--- a/sample-app/Cafe.Web/Views/Chef/Index.cshtml
+++ b/sample-app/Cafe.Web/Views/Chef/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<CafeReadModels.ChefTodoList.TodoListGroup>
+﻿@model List<Cafe.ReadModels.Tab.ChefTodoList.TodoListGroup>
 
 @{
     ViewBag.Title = "Chef Todo List";
