--- a/sample-app/Cafe.Web/Views/WaitStaff/Todo.cshtml
+++ b/sample-app/Cafe.Web/Views/WaitStaff/Todo.cshtml
@@ -1,4 +1,4 @@
-﻿@model Dictionary<int, List<CafeReadModels.OpenTabs.TabItem>>
+﻿@model Dictionary<int, List<Cafe.ReadModels.Tab.OpenTabs.TabItem>>
 
 @{
     ViewBag.Title = "Todo List For " + ViewBag.Waiter;
